log
Wed 20 Mar 2024 08:27:16 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
a37255c
Wed 20 Mar 2024 08:31:46 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
5f56c4e
Wed 20 Mar 2024 08:33:26 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
dc098b9
Wed 20 Mar 2024 08:37:57 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
df6f1c3
Wed 20 Mar 2024 08:43:22 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
bb4b4f6
Wed 20 Mar 2024 08:46:56 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
7392258
Wed 20 Mar 2024 08:55:41 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
6ac1a34
Wed 20 Mar 2024 09:04:31 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
36df709
Sat 23 Mar 2024 12:34:38 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:119:11: error: unused variable ‘P’ [-Werror=unused-variable]
  119 |    Stack* P = create_stack();
      |           ^
exercises.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
620ecb2
Sat 23 Mar 2024 12:47:10 PM UTC: 
 exercises.c | 23 +++++++++--------------
 1 file changed, 9 insertions(+), 14 deletions(-)
 tests:  5|1
total_score: 50/70
3799e0c
Sat 23 Mar 2024 12:47:44 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
26bdf12
Sat 23 Mar 2024 12:48:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
e89e887
Sat 23 Mar 2024 01:09:42 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++---------
 1 file changed, 23 insertions(+), 9 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:143:8: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  143 |     if(isEmpty(P)) return 1;)
      |        ^~~~~~~
exercises.c:143:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  143 |     if(isEmpty(P)) return 1;)
      |     ^~
exercises.c:143:29: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  143 |     if(isEmpty(P)) return 1;)
      |                             ^
exercises.c:143:29: error: expected statement before ‘)’ token
exercises.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c157c44
Sat 23 Mar 2024 01:11:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
09de884
Sat 23 Mar 2024 01:13:57 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
dae7d1e
Sat 23 Mar 2024 01:14:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
  145 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4fe6925
Sat 23 Mar 2024 01:16:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
  145 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0397b30
Sat 23 Mar 2024 01:20:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
  145 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c9f12c2
